- Fix incoming message counter being stuck if channel disconnects widget during message being received - Show that widget can't connect due to channel configuration (message with learn more link)

--- a/sdks/js/src/classes/widget/styles/styles.scss
+++ b/sdks/js/src/classes/widget/styles/styles.scss
@@ -74,6 +74,9 @@ $errorColor: darkred;
     @include innerOffset;
     display: block;
     font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .zcc-live-icon {
